# lzy-codec-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: basic_example.rs
src/: lib.rs  lzy.rs
tests/: lzy.rs
